--- a/public/styles/addUser.css
+++ b/public/styles/addUser.css
@@ -8,7 +8,7 @@
     margin: 0;
 }
 .btn:hover {
-    background-color: #2EE59D;
+    background-color: #eee !important;
     box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
     color: #fff;
     transform: translateY(-7px);
